# CHIP8

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  main.cpp
src/: main.cpp
